[gd_scene load_steps=14 format=3 uid="uid://xyc7kw7j1hnm"]

[ext_resource type="Script" path="res://player_ship/ship.gd" id="1_itnf6"]
[ext_resource type="Texture2D" uid="uid://bc5ha2i4g1gjc" path="res://resources/galaxy_defiance_resources/assets/ship.png" id="1_qlq1b"]
[ext_resource type="Script" path="res://resources/galaxy_defiance_resources/components/move_component.gd" id="2_56ip0"]
[ext_resource type="Script" path="res://resources/galaxy_defiance_resources/components/move_input_component.gd" id="3_umycu"]
[ext_resource type="Resource" uid="uid://dweka1jmpuoty" path="res://player_ship/ship_move_stats.tres" id="4_vyyeo"]
[ext_resource type="Script" path="res://resources/galaxy_defiance_resources/components/position_clamp_component.gd" id="5_2jl5p"]
[ext_resource type="Script" path="res://resources/galaxy_defiance_resources/components/spawner_component.gd" id="7_0csww"]
[ext_resource type="PackedScene" uid="uid://75l6u26p4j7l" path="res://projectiles/laser.tscn" id="8_mu8ku"]
[ext_resource type="Script" path="res://resources/galaxy_defiance_resources/components/scale_component.gd" id="9_rojff"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7r4i7"]
atlas = ExtResource("1_qlq1b")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4g2sb"]
atlas = ExtResource("1_qlq1b")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wmfe"]
atlas = ExtResource("1_qlq1b")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwx4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7r4i7")
}],
"loop": true,
"name": &"bank_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4g2sb")
}],
"loop": true,
"name": &"bank_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wmfe")
}],
"loop": true,
"name": &"center",
"speed": 5.0
}]

[node name="Ship" type="Node2D"]
script = ExtResource("1_itnf6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kwx4v")
animation = &"center"
autoplay = "center"

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("2_56ip0")
actor = NodePath("..")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("move_component")]
script = ExtResource("3_umycu")
move_stats = ExtResource("4_vyyeo")
move_component = NodePath("../MoveComponent")

[node name="PositionClampComponent" type="Node2D" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("5_2jl5p")
actor = NodePath("..")

[node name="LeftMuzzle" type="Marker2D" parent="."]
position = Vector2(-5, -5)

[node name="RightMuzzle" type="Marker2D" parent="."]
position = Vector2(5, -5)

[node name="SpawnerComponent" type="Node2D" parent="."]
script = ExtResource("7_0csww")
scene = ExtResource("8_mu8ku")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("9_rojff")
sprite = NodePath("../AnimatedSprite2D")
scale_amount = Vector2(1.15, 1.15)
